@@ -143,7 +143,7 @@ if (conf_get('die')) {
 }
 
 # Check for required configuration values.
-my @REQCVALS = qw(locale expire_logs server fantasy_pf ratelimit database:format);
+my @REQCVALS = qw(locale expire_logs server fantasy_pf ratelimit database:format bantype);
 foreach my $REQCVAL (@REQCVALS) {
 	if (!conf_get($REQCVAL)) {
 		my $err = 2;
